-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 110708) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z[.R]][-extraT]" :

  X = major version  - incremented after major redesigns
  Y = minor version  - incremented when new features are added
  Z = micro version  - incremented if major.minor version is not 
		       modified (optional)
  R = revision       - urgent fixes to planned releases (optional)

  extraT             - 'beta', 'pre' and 'rc' releases (optional)

Howto for reading the entries:

  added/removed = a new/removed feature, interfaces, or new 
                  implementation of some feature
  changed       = changed behaviour, modified implementation, APIs, etc
  fixed         = fixed bugs, "features" and other sources of problems

  [foobar]      = tag identifying the author of the change; see 
	          README for a complete list contributor tags; entries 
		  with no tags are from the main author(s)

-----------------------------------------------------------------------

xx082008 (v2.5.0) -** stable release **-
	- notice: slightly modified the version numbering scheme -
		  minor version is incremented whenever non-trivial
		  new features are added
	- notice: verified to compile with minimal warnings with
	          gcc-4.3.1
	- edi-entries: edi-40 closed (Update to error and warning 
	               reporting mechanisms), edi-38 closed (see
		       edi-7 partially implemented
	- added: ecasound.el: added missing ECI commands cs-option, 
	         cs-set-length, cs-set-position-samples, ai-get-length,
		 ai-set-position, and ai-set-position-samples [dto,
	  	 mlang]
        - added: tone generator input; '-i:tone,sine,440,10.3' will 
		 create a 440Hz sine tone with duration of 10.3 seconds;
		 this input type will be especially useful for reproducing