@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 110708) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 150808) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z[.R]][-extraT]" :
@@ -95,6 +95,9 @@ xx082008 (v2.5.0) -** stable release **-
 	           selected and connected setups is printed out
   	- changed: minor changes to the information printed out when
 		   open audio input/outputs
+	- changed: pipes, sockets and device nodes in LADSPA plugin
+		   directories are skipped (previously hidden files 
+		   were already skipped)
         - fixed: incorrect usage of the Python C API, which leads to
 	 	 segfaults when pyecasound is used under python2.5;
 		 fixes Debian bug #468965
@@ -121,6 +124,8 @@ xx082008 (v2.5.0) -** stable release **-
 		 by more chainops on the same chain
 	- fixed: bugs with preserving state across seeks with
 	         many controller objects (-kl, -kl2 and -kos)
+	- fixed: a bug in ecasound user's guide w.r.t. usage of 
+		 loop devices
 14082007 (v2.4.6.1) -** stable release **-
  	- fixed: extra debugging, printed to stderr, for resource file 
 		 values was accidentally left enabled in the 2.4.6 release
